--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "seed": "node --loader tsx --no-warnings ./prisma/seed.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
