--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-hook-form": "^7.66.1",
     "recharts": "^3.5.0",
     "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^4.1.12"
   },
   "devDependencies": {
