Add postinstall script for prisma generate

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "seed": "node --loader tsx --no-warnings ./prisma/seed.ts"
+    "seed": "node --loader tsx --no-warnings ./prisma/seed.ts",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
