--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "seed": "node --loader tsx --no-warnings ./prisma/seed.ts",
+    "seed": "node --import tsx --no-warnings ./prisma/seed.ts",
     "postinstall": "prisma generate"
   },
   "dependencies": {
@@ -23,6 +23,7 @@
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
@@ -42,6 +43,9 @@
     "use-debounce": "^10.0.6",
     "zod": "^4.1.12"
   },
+  "prisma": {
+    "seed": "npm run seed"
+  },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
@@ -51,6 +55,7 @@
     "eslint-config-next": "16.0.3",
     "prisma": "^6.19.0",
     "tailwindcss": "^4",
+    "tsx": "^4.7.1",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
