Add Google Drive backup upload support

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,11 @@ AUTH_SECRET=your-secret-key-here-change-in-production
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=your-nextauth-secret-here-change-in-production
 
+# Google Drive backup (service account JSON or base64-encoded JSON)
+GOOGLE_SERVICE_ACCOUNT_KEY=
+# Optional: override default Drive folder
+# GOOGLE_DRIVE_FOLDER_ID=
+
 # For Vercel production
 # NEXTAUTH_URL=https://your-app.vercel.app
 # AUTH_SECRET=generate-with: openssl rand -base64 32
