--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
+    "googleapis": "^166.0.0",
     "lucide-react": "^0.554.0",
     "next": "16.0.3",
     "next-auth": "^5.0.0-beta.30",
