--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
     "lucide-react": "^0.554.0",
     "next": "16.0.3",
     "next-auth": "^5.0.0-beta.30",
+    "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-day-picker": "^9.11.2",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.1",
     "recharts": "^3.5.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.6",
