--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@hookform/resolvers": "^5.2.2",
+    "@next/bundle-analyzer": "^16.0.5",
     "@prisma/client": "^6.19.0",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -25,6 +25,7 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@tanstack/react-query": "^5.90.11",
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
@@ -33,6 +34,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "googleapis": "^166.0.0",
+    "jose": "^6.1.2",
     "lucide-react": "^0.554.0",
     "next": "16.0.3",
     "next-auth": "^5.0.0-beta.30",
@@ -41,11 +43,13 @@
     "react-day-picker": "^9.11.2",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.1",
+    "react-swipeable": "^7.0.2",
     "recharts": "^3.5.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.6",
+    "vaul": "^1.1.2",
     "web-push": "^3.6.7",
     "zod": "^4.1.12"
   },
